<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bgimage_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:orientation="vertical"
        android:paddingBottom="20sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="18sp"
            android:text="報馴額を記載していただく ことにより
オフア一がされやすくなります

" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/job_web"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/fragment_profile_two_fee_web"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@mipmap/frame_profile_a"
                android:gravity="center_vertical"
                android:hint="@string/example_job"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/job_salon"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/fragment_profile_two_fee_salon"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@mipmap/frame_profile_a"
                android:gravity="center_vertical"
                android:hint="@string/example_job"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/job_tv"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/fragment_profile_two_fee_tv"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@mipmap/frame_profile_a"
                android:gravity="center_vertical"
                android:hint="@string/example_job"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/magazine"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/fragment_profile_two_magazine"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@mipmap/frame_profile_b"
                android:gravity="center_vertical"
                android:hint="@string/please_select"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/introduction"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/fragment_profile_two_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/frame_profile_a"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLength="50"
                android:selectAllOnFocus="false"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>