<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/bgimage_profile">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/black"
                android:elevation="4dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="2"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_centerVertical="true"
                            android:alpha="0.3"
                            android:id="@+id/back"
                            android:layout_width="16dp"
                            android:layout_height="18dp"
                            android:src="@drawable/ic_action_back"
                            android:scaleType="fitXY"/>

                        <TextView
                            android:id="@+id/fragment_profile_one_back"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Back"
                            android:textSize="22sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/fragment_profile_one_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="管理者口グイ ン"
                        android:textSize="22sp"
                        tools:ignore="HardcodedText"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:id="@+id/fragment_profile_one_next"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="次へ"
                        tools:ignore="HardcodedText"
                        android:textSize="22sp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:layout_gravity="center"
                        />


                </LinearLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:paddingBottom="20sp"

            >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/fragment_profile_one_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/bt_profile_dummy"
                    />
                <TextView
                    android:id="@+id/fragment_profile_one_avatar_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/name"
                    android:textSize="25sp"/>
                <EditText
                    android:id="@+id/fragment_profile_one_name"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:background="@mipmap/frame_profile_a"
                    android:hint="@string/please_enter"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:textSize="25sp"
                    android:textColor="#000"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/gender"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/fragment_profile_one_gender"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:background="@mipmap/frame_profile_b"
                    android:hint="Gender"
                    android:textSize="25sp"
                    android:textColor="#000"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/height"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/fragment_profile_one_height"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:background="@mipmap/frame_profile_b"
                    android:hint="@string/please_select"
                    android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/weight"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/fragment_profile_one_weight"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:background="@mipmap/frame_profile_b"
                    android:hint="@string/please_select"
                    android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/shoe_size"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/fragment_profile_one_shoe_size"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:background="@mipmap/frame_profile_b"
                    android:hint="@string/please_select"
                    android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/clothes_size"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/fragment_profile_one_clothe_size"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:background="@mipmap/frame_profile_b"
                    android:hint="@string/please_select"
                    android:textSize="25sp"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


</ScrollView>